--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Bluetooth Chat App</string>
+    <string name="app_name">Bluetooth Client</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
 </resources>
